* Thu Feb 07 2019 Anthony Molinaro (djnym) 6.11.0
- update lwes library
- added a more robust mondemand.conf file parser

* Fri Dec 14 2018 Anthony Molinaro (djnym) 6.10.1
- use rebar3 in Makefile
- fix for when statsmsg contexts are mismatched, the library will no longer
crash

* Fri Jun 08 2018 Yoshihiro Tanaka (yoshi) 6.10.0
- Add literal memory usage stat

* Tue May 15 2018 Anthony Molinaro (djnym) 6.9.4
- have version in .app.src come from ChangeLog

* Mon May 14 2018 Anthony Molinaro (djnym) 6.9.3
- Switch ChangeLog format to semi-standard RPM format
- Fallback to a default config if the config file is not found

* Sat Apr 28 2018 Anthony Molinaro (djnym) 6.9.2
- minor fixes to compile without warnings under erlang 20

* Fri Oc 20 2017 Anthony Molinaro (djnym) 6.9.1
- forgot to bump the version in the .app.src

* Fri Oct 20 2017 Anthony Molinaro (djnym) 6.9.0
- don't print out info about flushing, instead just keep a metric.
- better unit test coverage

* Thu Apr 20 2017 Anthony Molinaro (djnym) 6.8.1
- avoid webmachine dependency

* Tue Mar 21 2017 Anthony Molinaro (djnym) 6.8.0
- add user state to the mondemand_statdb:map function so that you can do
the equivalent of mapfold there.
- alter flushing to use an initial state function
- added a convience function for adding contexts to events which support
them to mondemand_event.

* Mon Mar 06 2017 Anthony Molinaro (djnym) 6.7.0
- generalize flush functionality so that the server can plug in a slightly
modified version.
- cleanup some config, all application config should be read only in
mondemand_config

* Fri Feb 03 2017 Anthony Molinaro (djnym) 6.6.1
- make sure that mondemand vmstats metrics are not emitted without a full
interval having gone by.  This means a restart of a service can lead to
a gap in vmstats, but that's better than the spikes which can happen without
waiting (IMHO).

* Thu Feb 02 2017 Anthony Molinaro (djnym) 6.6.0
- add scheduler utilization to vmstats
