@@ -1,3 +1,5 @@
+%% -*- mode: erlang -*-
+{minimum_otp_vsn, "18"}.
 
 %% enable coverage output when running eunit
 { cover_enabled, true }.
