@@ -1,3 +1,6 @@
+* Tue Jun 4 2019 David Hull <david.hull@openx.com> 6.12.0
+- Add gcounter type, a counter which emits values like a gauge.
+
 * Thu Feb 07 2019 Anthony Molinaro (djnym) 6.11.0
 - update lwes library
 - added a more robust mondemand.conf file parser
